# fe/src/views/project/tower/api.js
@@ -10,7 +10,7 @@ import { request } from '@/utils'
 
 export default {
   create: data => request.post('/user', data),
-  read: (params = {}) => request.get('/user', { params }),
+  read: (params = {}) => request.get('/api/tower-details', { params }),
   update: data => request.patch(`/user/${data.id}`, data),
   delete: id => request.delete(`/user/${id}`),
   resetPwd: (id, data) => request.patch(`/user/password/reset/${id}`, data),
